<resources>
    <string name="app_name">Fall Detection</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="username">User Name</string>
    <string name="click_to_login">Click to Login</string>
    <string name="click_to_register">Click to Register</string>
    <string name="logout">Logout</string>
    <string name="start_monitor">Start Monitor</string>
    <string name="stop_monitor">Stop Monitor</string>
    <string name="back">Back</string>
    <string name="emergencyContactName">Emergency Contact Name</string>
    <string name="emergencyContactNumber">Emergency Contact Number</string>
    <string name="profile">Profile</string>
    <string name="update_profile">Update Profile</string>
</resources>